fix: fixed donate button was not clickable on mobile resolutions

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -83,6 +83,10 @@ body {
 
 .mc-hero {
   position: relative;
+
+  &__content-holder {
+    position: relative;
+  }
 }
 
 .mc-hero__content {
